<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mandel Droid</string>
    
    
    
    <string name="m_fractal_type">Fractal Type</string>
    <string name="m_fractal_type_mandelbrot">Mandelbrot</string>
    <string name="m_fractal_type_bs">Burning Ship</string>
	<string name="m_fractal_type_pbs">Perpendicular Burning Ship</string>
	<string name="m_fractal_type_pm">Perpendicular Mandelbrot</string>
	
    <string name="m_fractal_colors">Fractal Colors</string>
    
    <string name="m_fractal_colors_standard">Standard</string>
    <string name="m_fractal_colors_cosmos">Cosmos</string>
    <string name="m_fractal_colors_reverse">Reverse</string>
    <string name="m_fractal_colors_cyclic">Cyclic (you can see the unseen)</string>
    <string name="m_fractal_colors_retro">Retro</string>
    <string name="m_fractal_colors_fire">Fire</string>
	<string name="m_fractal_colors_ice">Ice</string>
	<string name="m_fractal_colors_turquoise">Tourquoise</string>
	<string name="m_fractal_colors_none">None (educational)</string>

	<string name="m_max_iterations">Max Iterations</string>
	<string name="m_max_iterations_32">32 (intentionally low)</string>
	<string name="m_max_iterations_64">64</string>
	<string name="m_max_iterations_128">128</string>
	<string name="m_max_iterations_256">256 (good quality)</string>
	<string name="m_max_iterations_512">512</string>
	<string name="m_max_iterations_1024">1024</string>
	<string name="m_max_iterations_2048">2048 (slooow)</string>
			
	<string name="m_reset">Reset</string>
    <string name="m_places">Touristic Destinations :)</string>
    <string name="m_settings">Settings</string>
    <string name="m_save_image">Save Image</string>
    <string name="m_set_wallpaper">Set Wallpaper</string>
    <string name="m_copy_coordinates">Copy Coordinates to Clipboard</string>
    
    
    
	<string name="s_max_iterations">Max Iterations</string>
    <string name="s_max_iterations_descr">Change Max Iterations</string>

	<string name="s_fractal_type">Fractal Type</string>
    <string name="s_fractal_type_descr">Change Fractal Type</string>
    
	<string name="s_fractal_color">Fractal Colors</string>
    <string name="s_fractal_color_descr">Change Fractal Colors</string>
    
	<string name="s_pixel_preview">Debug Rendering</string>
    <string name="s_pixel_preview_descr">Pixel Preview for Nerds</string>
   
    
    
    <string name="t_save_image_ok">Image saved to </string>
    <string name="t_save_image_err">Image save failed.</string>
    <string name="t_set_wallpaper_ok">Wallpaper Set</string>
    <string name="t_set_wallpaper_err">Wallpaper Set Failed.</string>
    <string name="t_copy_to_clipboard_ok">Coordinates are in the clipboard.</string>
</resources>